--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-google-login": "^5.1.21",
     "react-i18next": "^11.7.0",
     "react-router-dom": "^5.2.0",
